--- a/app/src/main/res/layout/activity_frm_buscar_maestro.xml
+++ b/app/src/main/res/layout/activity_frm_buscar_maestro.xml
@@ -6,4 +6,29 @@
     android:layout_height="match_parent"
     tools:context=".frmBuscarMaestro">
 
+
+    <ScrollView
+        android:layout_width="410dp"
+        android:layout_height="722dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginRight="1dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="TextView" />
+
+        </LinearLayout>
+
+
+    </ScrollView>
 </android.support.constraint.ConstraintLayout>
