--- a/app/src/main/res/layout/activity_frm_alta_usuario.xml
+++ b/app/src/main/res/layout/activity_frm_alta_usuario.xml
@@ -6,135 +6,149 @@
     android:layout_height="match_parent"
     tools:context=".frmAltaUsuario">
 
-    <ScrollView
-        android:id="@+id/svPrincipal"
-        android:layout_width="420dp"
-        android:layout_height="731dp"
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="402dp"
+        android:layout_height="79dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/cliente" />
 
+    <TextView
+        android:id="@+id/lblTituloAltaUsuario"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/lbl_TituloAltaUsuario"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
-        <LinearLayout
-            android:id="@+id/llListado"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+    <EditText
+        android:id="@+id/txtUsuario"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
+        android:ems="10"
+        android:hint="@string/txt_Usuario"
+        android:inputType="textPersonName"
+        android:backgroundTint="@color/colorPrimary"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/lblTituloAltaUsuario" />
 
-            <TextView
-                android:id="@+id/lblTituloAltaUsuario"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="117dp"
-                android:layout_marginLeft="117dp"
-                android:layout_marginTop="24dp"
-                android:text="@string/lbl_TituloAltaUsuario"
-                android:textSize="@dimen/fab_margin"
-                android:textStyle="bold"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+    <EditText
+        android:id="@+id/txtContrasenia"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:ems="10"
+        android:hint="@string/txt_Contrasenia"
+        android:inputType="textPassword"
+        android:backgroundTint="@color/colorPrimary"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtUsuario" />
 
-            <EditText
-                android:id="@+id/txtUsuario"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="28dp"
-                android:layout_marginLeft="28dp"
-                android:layout_marginTop="9dp"
-                android:ems="10"
-                android:hint="@string/txt_Usuario"
-                android:inputType="textPersonName" />
+    <EditText
+        android:id="@+id/txtRUT"
+        android:layout_width="179dp"
+        android:layout_height="44dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:ems="10"
+        android:hint="@string/txt_RUT"
+        android:inputType="textPersonName"
+        android:backgroundTint="@color/colorPrimary"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtContrasenia" />
 
-            <EditText
-                android:id="@+id/txtContrasenia"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="28dp"
-                android:layout_marginLeft="28dp"
-                android:layout_marginTop="12dp"
-                android:ems="10"
-                android:hint="@string/txt_Contrasenia"
-                android:inputType="textPassword" />
+    <EditText
+        android:id="@+id/txtNombre"
+        android:layout_width="362dp"
+        android:layout_height="44dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:ems="10"
+        android:hint="@string/txt_Nombre"
+        android:inputType="textPersonName"
+        android:backgroundTint="@color/colorPrimary"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtRUT" />
 
-            <EditText
-                android:id="@+id/txtRUT"
-                android:layout_width="179dp"
-                android:layout_height="44dp"
-                android:layout_marginStart="28dp"
-                android:layout_marginLeft="28dp"
-                android:layout_marginTop="12dp"
-                android:ems="10"
-                android:hint="@string/txt_RUT"
-                android:inputType="textPersonName" />
+    <EditText
+        android:id="@+id/txtApellido"
+        android:layout_width="362dp"
+        android:layout_height="44dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:ems="10"
+        android:hint="@string/txt_Apellido"
+        android:inputType="textPersonName"
+        android:backgroundTint="@color/colorPrimary"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtNombre" />
 
-            <EditText
-                android:id="@+id/txtNombre"
-                android:layout_width="362dp"
-                android:layout_height="44dp"
-                android:layout_marginStart="28dp"
-                android:layout_marginLeft="28dp"
-                android:layout_marginTop="12dp"
-                android:ems="10"
-                android:hint="@string/txt_Nombre"
-                android:inputType="textPersonName" />
+    <EditText
+        android:id="@+id/txtDireccion"
+        android:layout_width="362dp"
+        android:layout_height="44dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:ems="10"
+        android:hint="@string/txt_Direccion"
+        android:inputType="textPersonName"
+        android:backgroundTint="@color/colorPrimary"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtApellido" />
 
-            <EditText
-                android:id="@+id/txtApellido"
-                android:layout_width="362dp"
-                android:layout_height="44dp"
-                android:layout_marginStart="28dp"
-                android:layout_marginLeft="28dp"
-                android:layout_marginTop="12dp"
-                android:ems="10"
-                android:hint="@string/txt_Apellido"
-                android:inputType="textPersonName" />
+    <EditText
+        android:id="@+id/txtTelefono"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:ems="10"
+        android:hint="@string/txt_Telefono"
+        android:inputType="phone"
+        android:backgroundTint="@color/colorPrimary"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtDireccion" />
 
-            <EditText
-                android:id="@+id/txtDireccion"
-                android:layout_width="362dp"
-                android:layout_height="44dp"
-                android:layout_marginStart="28dp"
-                android:layout_marginLeft="28dp"
-                android:layout_marginTop="12dp"
-                android:ems="10"
-                android:hint="@string/txt_Direccion"
-                android:inputType="textPersonName" />
+    <EditText
+        android:id="@+id/txtEmail"
+        android:layout_width="362dp"
+        android:layout_height="44dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:ems="10"
+        android:hint="@string/txt_Email"
+        android:inputType="textEmailAddress"
+        android:backgroundTint="@color/colorPrimary"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtTelefono" />
 
-            <EditText
-                android:id="@+id/txtTelefono"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="28dp"
-                android:layout_marginLeft="28dp"
-                android:layout_marginTop="12dp"
-                android:ems="10"
-                android:hint="@string/txt_Telefono"
-                android:inputType="phone" />
+    <Button
+        android:id="@+id/btnAceptar"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginRight="32dp"
+        android:background="@drawable/boton_redondo"
+        android:onClick="btnAceptar_click"
+        android:text="@string/btn_Aceptar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />
 
-            <EditText
-                android:id="@+id/txtEmail"
-                android:layout_width="362dp"
-                android:layout_height="44dp"
-                android:layout_marginStart="28dp"
-                android:layout_marginLeft="28dp"
-                android:layout_marginTop="12dp"
-                android:ems="10"
-                android:hint="@string/txt_Email"
-                android:inputType="textEmailAddress" />
-
-            <Button
-                android:id="@+id/btnAceptar"
-                android:layout_width="226dp"
-                android:layout_height="51dp"
-                android:layout_marginStart="80dp"
-                android:layout_marginLeft="80dp"
-                android:layout_marginTop="12dp"
-                android:layout_marginBottom="21dp"
-                android:onClick="btnAceptar_click"
-                android:text="@string/btn_Aceptar" />
-
-
-
-        </LinearLayout>
-    </ScrollView>
 
 </android.support.constraint.ConstraintLayout>
